# meal-plan-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  server.py
.claude/commands/: meal-plan.example.md
data/: sensitivity_factors.example.json  stores.example.json
tests/: test_tools.py
tools/: ads.py  history.py  screener.py  seasonal.py  weather.py
